added a delete button icon to the logs page

--- a/public/logs.html
+++ b/public/logs.html
@@ -1,8 +1,14 @@
 <div id ="logsDiv" ng-controller="LogCtrl">
-	<div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
-	<button ng-click = "myFilter = {completed}" type="button" class="btn btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off">All</button>
-	<button ng-click = "myFilter = {completed:true}" type="button" class="btn btn-outline-success" data-toggle="button" aria-pressed="false" autocomplete="off">Complete</button>
-	<button ng-click = "myFilter = {completed:false}" type="button" class="btn btn-outline-danger" data-toggle="button" aria-pressed="false" autocomplete="off">Incomplete</button>
+<div class="btn-group btn-group-toggle" role="group" data-toggle="buttons">
+  <label class="btn btn-outline-dark" ng-click = "myFilter = {completed}">
+    <input type="radio" name="options" id="option1" autocomplete="off" checked> All
+  </label>
+  <label class="btn btn-outline-success" ng-click = "myFilter = {completed:true}" >
+    <input type="radio" name="options" id="option2" autocomplete="off"> Complete
+  </label>
+  <label class="btn btn-outline-danger" ng-click = "myFilter = {completed:false}">
+    <input type="radio" name="options" id="option3" autocomplete="off"> Incomplete
+  </label>
 </div>
 
 <ul id="log_cards" class="pre-scrollable mt-3">
@@ -10,15 +16,18 @@
 	<div id="log_container" class="container content-area sample-show-hide" ng-repeat="log in logs | filter:myFilter">
 		<div class="row">
 			<div class="col-sm-6">
-				<h5 class="col-sm-12 mb-1">Description: {{log.description}}</h5>
-				<small class="col-sm-12">Reason: {{log.reason}}</small>
+				<h5>Description: {{log.description}}</h5>
+				<small>Reason: {{log.reason}}</small>
 			</div>
-			<div class="col-sm-6">
-				<small class="col-sm-12">Start Date: {{log.startDate | date:'MM/dd/yyyy'}}</small>
+			<div class="col-sm-4">
+				<small>Start Date: {{log.startDate | date:'MM/dd/yyyy'}}</small>
 				<br>
-				<small class="col-sm-12">End Date: {{log.endDate | date:'MM/dd/yyyy'}}</small>
+				<small>End Date: {{log.endDate | date:'MM/dd/yyyy'}}</small>
 				<br>
 				<small>Completed:{{log.completed}} </small>
+			</div>
+			<div class="col-sm-2">
+				<button id = "removeLogButton" type="button" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>
 			</div>
 		</div>
 		<hr id="log_separator">
