Fixed Time issue and added alittle to about page

--- a/public/about.html
+++ b/public/about.html
@@ -1,1 +1,13 @@
-<p>Zeitplan is your solution!</p>
+<h4>Brought To You By synchronizedBroncos</h4>
+<br>
+<h5>An All in One Productivity Solution:</h5>
+Keep track of Things to Remember (TTR)
+<br>
+Simple and effective daily scheduler
+<br>
+Logs page to keep track of progress
+<br>
+Pomodoro Timer to manage your time</p>
+<p>Zeitplan utilizes a simple, effective, and streamlined approach to help you stay productive. It includes personalized reminders
+through e-mail, text, and push notifications. Seemlessly use this web app on mobile, laptop, or desktop.
+</p>
