--- a/public/logs.html
+++ b/public/logs.html
@@ -1,7 +1,7 @@
 <div id ="logsDiv" ng-controller="LogCtrl">
 <div class="btn-group btn-group-toggle" role="group" data-toggle="buttons">
-  <label class="btn btn-outline-dark" ng-click = "myFilter = {completed}">
-    <input type="radio" name="options" id="option1" autocomplete="off" checked> All
+  <label class="btn btn-outline-dark btn-default active" ng-click = "myFilter = {completed}">
+    <input type="radio" name="options" id="option1" autocomplete="off" checked="checked"> All
   </label>
   <label class="btn btn-outline-success" ng-click = "myFilter = {completed:true}" >
     <input type="radio" name="options" id="option2" autocomplete="off"> Complete
@@ -11,7 +11,7 @@
   </label>
 </div>
 
-<ul id="log_cards" class="pre-scrollable mt-3">
+<ul id="log_cards" class="mt-3">
 	<hr class="log-separator">
 	<div class="container content-area sample-show-hide" ng-repeat="log in logs | orderBy: '-' | filter:myFilter">
 		<div class="row">
