--- a/public/ttr.html
+++ b/public/ttr.html
@@ -5,18 +5,18 @@
   <div id="ttrDiv">
     <button type="button" class="btn btn-danger ttrButton" ng-click="deleteSelectedTTR()">Delete</button>
     <button type="button" class="button btn btn-primary ttrButton" ng-click="addModal.openAdd()">Add</button>
-    <table id = "ttrTable" class="table table-striped">
+    <table id = "ttrTable" class="table table-striped tabTable">
       <thead>
         <tr>
-          <th></th>
-          <th scope = "col">Description</th>
-          <th class="text-nowrap" scope = "col">Due Date</th>
+          <th style="width:10%"></th>
+          <th style="width:65%" scope = "col">Description</th>
+          <th style="width:25%" scope = "col">Due Date</th>
         </tr>
       </thead>
         <tr ng-repeat="ttr in ttrs | orderBy: 'dueDate'">
           <td><input type="checkbox" ng-model="checkStatus" ng-init='checkStatus=false' value="ttrCheck" ng-click="selectedTTR(ttr._id, checkStatus)"></td>
           <td ng-click="editModal.open(ttr)">{{ ttr.description }}</td>
-          <td>{{ ttr.dueDate | date:'MM/dd/yyyy'}}</td>
+          <td>{{ ttr.dueDate | date:'MM/dd/yy'}}</td>
         </tr>
         </table>
   </div>
