Simple UI change

--- a/public/schedule.html
+++ b/public/schedule.html
@@ -9,10 +9,10 @@
         <thead>
           <tr>
             <th style="width:6%"></th>
-            <th style="width:37%" scope="col">Description</th>
-            <th style="width:23%" scope="col">Start Date</th>
-            <th style="width:17%" scope="col">Start Time</th>
-            <th style="width:17%" scope="col">End Time</th>
+            <th style="width:29%" scope="col">Description</th>
+            <th style="width:25%" scope="col">Start Date</th>
+            <th style="width:20%" scope="col">Start</th>
+            <th style="width:20%" scope="col">End</th>
           </tr>
         </thead>
         <tr ng-repeat="schedule in schedules | orderBy: 'startDate'">
