--- a/public/schedule.html
+++ b/public/schedule.html
@@ -8,9 +8,9 @@
       <table id = "scheduleTable" class="table table-striped tabTable">
         <thead>
           <tr>
-            <th style="width:6%"></th>
-            <th style="width:29%" scope="col">Description</th>
-            <th style="width:25%" scope="col">Start Date</th>
+            <th style="width:5%"></th>
+            <th style="width:30%" scope="col">Description</th>
+            <th style="width:25%" scope="col">Date</th>
             <th style="width:20%" scope="col">Start</th>
             <th style="width:20%" scope="col">End</th>
           </tr>
