Final Table design?

--- a/public/ttr.html
+++ b/public/ttr.html
@@ -10,7 +10,7 @@
         <tr>
           <th style="width:10%"></th>
           <th style="width:60%" scope = "col">Description</th>
-          <th style="width:30%" scope = "col">Due Date</th>
+          <th style="width:30%" scope = "col">Due</th>
         </tr>
       </thead>
         <tr ng-repeat="ttr in ttrs | orderBy: 'dueDate'">
