implement PWA functionality

--- a/public/ttr.html
+++ b/public/ttr.html
@@ -84,8 +84,8 @@
             <input type="text" class="form-control" id="scheduleDescription" ng-model="description" ng-value="model.data.description">
             <label for="scheduleStartDate">Start Date</label>
             <input type="date" class="form-control" id="scheduleStartDate" ng-model="date">
-            <label for="scheduleStartDate">Start Time</label>
-            <input type="time" class="form-control" id="scheduleEndDate" ng-model="startDate">
+            <label for="scheduleStartTime">Start Time</label>
+            <input type="time" class="form-control" id="scheduleStartTime" ng-model="startDate">
             <label for="scheduleEndDate">End Time</label>
             <input type="time" class="form-control" id="scheduleEndDate" ng-model="endDate">
             <label for="scheduleNotification">Notify Me</label>
