update landing page with meta description and set youtube video start time to 3 seconds

--- a/landing-page/landing.html
+++ b/landing-page/landing.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Zeitplan</title>
+    <meta
+      name="description"
+      content="Zeitplan is a fully functional Progressive Web Application designed to handle all of your scheduling needs."
+    />
     <link
       rel="icon"
       href="https://assets.dorik.com/5fb0cec2fdd99d00110ae957/images/cropped_logo_25pjtj9m.png"
@@ -97,7 +101,7 @@
               <div class="dorik-video-yjtlnmjk-wrapper ">
                 <div class="dorik-iframe dorik-video-yjtlnmjk ">
                   <iframe
-                    src="https://www.youtube.com/embed/piDXvITGJ6U?fs=1&amp;muted=0&amp;loop=0&amp;autoplay=0&amp;controls=1"
+                    src="https://www.youtube.com/embed/piDXvITGJ6U?fs=1&amp;muted=0&amp;loop=0&amp;autoplay=0&amp;controls=1&amp;start=3"
                     title="yjtlnmjk"
                     frameborder="0"
                     allow=""
